--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/__pycache__/
 tests/*
 !tests/test_device_selection.py
+!tests/test_windows.py
 .vscode/
 .cursor/
 benchmark/
@@ -18,6 +19,7 @@ run_*.py
 vram_diagnostic.py
 test_*.py
 !tests/test_device_selection.py
+!tests/test_windows.py
 VRAM_OPTIMIZATIONS_SUMMARY.md
 seedvr2.py
 src/core/isolated_generation.py
